--- a/website/src/app.html
+++ b/website/src/app.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 
+	<title>Energiegemeinschaft</title>
+
 	<!-- SMUI Styles -->
 <link rel="stylesheet" href="/smui.css" />
 	<!-- Hint where we get fonts from. -->
