improved landing page

--- a/website/src/app.html
+++ b/website/src/app.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 
-	<title>Energiegemeinschaft</title>
+	<title>Energiegemeinschaft Ischl Strom</title>
 
 	<!-- SMUI Styles -->
 	<link rel="stylesheet" href="/smui.css" />
